[package]
name = "bom-server"
version = "0.1.0"
authors = ["Benjamin Altieri <benaltieri@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
uuid = { version = "0.8", features = ["serde", "v3"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.2"
url = "2.2"
anyhow = "1.0"
thiserror = "1.0"
assert_matches = "1.4"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "uuid"]
